--- a/app/src/main/res/layout/fragment_today_weather.xml
+++ b/app/src/main/res/layout/fragment_today_weather.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/weather_content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -27,30 +28,32 @@
     <Button
         android:id="@+id/bt_weather_here"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:text="@string/weather_here"
         android:textAllCaps="false"
-        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/bt_today"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/bt_today" />
+        app:layout_constraintTop_toBottomOf="@id/ed_search" />
 
     <Button
         android:id="@+id/bt_today"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="5dp"
         android:text="@string/today"
         android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="@id/bt_weather_here"
         app:layout_constraintEnd_toStartOf="@id/bt_week"
         app:layout_constraintStart_toEndOf="@+id/bt_weather_here"
-        app:layout_constraintTop_toBottomOf="@id/ed_search" />
+        app:layout_constraintTop_toTopOf="@id/bt_weather_here" />
 
     <Button
         android:id="@+id/bt_week"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_height="0dp"
         android:text="@string/for_a_week"
         android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="@+id/bt_today"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/bt_today"
         app:layout_constraintTop_toTopOf="@id/bt_today" />
@@ -59,10 +62,8 @@
         android:id="@+id/tw_city_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginVertical="5dp"
+        android:layout_marginTop="5dp"
         android:textSize="20sp"
-        app:layout_constraintBottom_toTopOf="@id/recycler_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/bt_today"
@@ -72,6 +73,7 @@
         android:id="@+id/recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="5dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -79,5 +81,15 @@
         app:layout_constraintTop_toBottomOf="@id/tw_city_name"
         tools:itemCount="7"
         tools:listitem="@layout/item_weather" />
+
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tw_city_name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
