--- a/app/src/main/res/layout/item_weather.xml
+++ b/app/src/main/res/layout/item_weather.xml
@@ -3,18 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@drawable/shape_of_the_weather_item"
-    android:layout_height="150dp">
+    android:layout_height="150dp"
+    android:background="@drawable/shape_of_the_weather_item">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="0dp"
+        android:background="@drawable/shape_of_the_weather_item"
+        android:backgroundTint="@color/gray_200"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@drawable/shape_of_the_weather_item"
         tools:src="@tools:sample/avatars" />
 
     <TextView
